# ppc-mach-o

./: .gitmodules  GNUmakefile.in  Makefile  Makefile.in  README.md  autogen.sh  configure.ac  my_path_prog_glob.m4  my_xcode_sysroot.m4  resolvepath.c  revert-submodule.sh  triplet-as-skel.sh  triplet-cctool-skel.sh
